# actix-web-4-hello-world

./: Cargo.toml  README.md
loadtest/: k6_get_loadtest.js
