[package]
name = "actix-web-4-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.4.0"
actix-rt = "2.9.0"
actix-server = "2.3.0"
actix-web = "4.4.0"
env_logger = "0.10.0"
tracing = "0.1.40"
